<resources>
    <string name="app_name">SocialPet</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_member">Are you a New Member?</string>
    <string name="cult_of_goats_inc">Cult of Goats Inc.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="uf">UF</string>
    <string name="city">City</string>
    <string name="address_number">Number</string>
    <string name="street_name">Street Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome">Welcome</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="unify_project">Unify Project</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_">Welcome,</string>
    <string name="buddy_">buddy!</string>
    <string name="not_a_member_sigup_now">Not a member? Sign Up now!</string>
    <string name="phone_number_optional">Phone Number (optional)</string>
    <string name="save">Save</string>
    <string name="_1_of_3">1 of 3</string>
    <string name="_2_of_3">2 of 3</string>
    <string name="_3_of_3">3 of 3</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="likes">Likes</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="my_pets">My Pets</string>
    <string name="text_forgot_password">We just need your registered email address/nto send you password reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="language_">Language:</string>
    <string name="appearance_">Appearance:</string>
    <string name="day_mode">Day Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="change">Change</string>
    <string name="english">English</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="pet_s_name">Pet´s name</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="species">Species</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="follow">Follow</string>
    <string name="liked_your_post">liked your post</string>
    <string name="started_following_you">started following you</string>
    <string name="Choose_Language">Choose Language:</string>
    <string name="Portuguese">Portuguese</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="dialogEnglish">English</string>
    <string name="dialogPortuguese">Portuguese</string>
    <string name="add_pet">Add Pet</string>
    <string name="description">Description</string>
    <string name="add_your_location">Add your location</string>
    <string name="add_post_button">Add post button</string>
    <string name="add_photo_to_post">add photo to post</string>
    <string name="add_location_to_post">Add location to post</string>
    <string name="add_pet_button">Add pet button</string>
    <string name="gender">Gender</string>
</resources>