<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_dest"
            android:icon="@drawable/ic_home"
            android:menuCategory="secondary"
            android:title="@string/home"/>

        <item
            android:id="@+id/search_dest"
            android:menuCategory="secondary"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />

        <item
            android:id="@+id/addPost_dest"
            android:menuCategory="secondary"
            android:icon="@drawable/ic_add"
            android:title="@string/add" />

        <item
            android:id="@+id/profile_dest"
            android:menuCategory="secondary"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>
</menu>