<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ui.Activity.Fragment.CustomLanguageDialogFragment">

    <TextView
        android:id="@+id/txtLanguageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Choose_Language"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <RadioGroup
        android:id="@+id/LanguageRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLanguageHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <RadioButton
            android:id="@+id/EnglishRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogEnglish"
            />
        <RadioButton
            android:id="@+id/PortugueseRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogPortuguese"
            />
    </RadioGroup>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/LanguageRG"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/blue2"
        app:layout_constraintTop_toBottomOf="@id/LanguageRG"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>