<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Activity.LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/Unify_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Unify"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/unifyChatbobbles_ImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    app:srcCompat="@drawable/_486395304_20_discussion_80569" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_InputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLogin_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:ems="16"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLogin_InputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordLogin_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:ems="16"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:onClick="logIN"
                android:text="@string/log_in" />

            <TextView
                android:id="@+id/SignUp_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="startRegister"
                android:text="@string/sign_up"
                android:textColor="@color/red1"
                android:textSize="12dp"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>







    <TextView
        android:id="@+id/cultOfGoats_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/unify_project"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>